--- a/css/style.css
+++ b/css/style.css
@@ -135,10 +135,11 @@ body{
     background-color: rgb(58, 58, 58);
     border-radius: 10px 0 10px 10px;
     border: 1px solid rgb(100, 100, 100);
-    width: 100px;
+    /* width: 100px; */
     padding: 10px;
     top: 58px;
     left: -41px;
+    z-index: 200;
 }
 .user-menu ul li{
     width: 100%;
@@ -148,9 +149,9 @@ body{
 }
 
 
-.main{
+/* .main{
     height: calc(100vh - 115px);
-}
+} */
 
 
 .explore{
@@ -190,6 +191,9 @@ body{
 
 .hm-menu{
     padding: 30px 0 0;
+}
+.hmm-bot{
+    width: 100%;
 }
 
 .hm-menu li{
@@ -239,11 +243,13 @@ body{
 .sshl-img{
     width: 350px;
     height: 300px;
+    display: flex;
+    align-items: center;
 }
 
 .sshl-img img{
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    /* height: 350px; */
     object-fit: cover;
     /* transform: rotate(-10deg); */
     animation: img alternate 5s ease-in-out infinite;
@@ -268,8 +274,8 @@ body{
 
 .sshl-titles ul li img{
     filter: invert(1);
-    width: 60px;
-    margin: 10px 20px;
+    width: 40px;
+    margin: 10px 10px;
 }
 
 
@@ -294,8 +300,8 @@ body{
     width: 60px;
     height: 60px;
     border-radius: 50px;
-    bottom: 40px;
-    right: 60px;
+    bottom: 20px;
+    right: 20px;
 }
 
 .main-header-btn:hover{
